# cmake_samples

MyMultiProject/: CMakeLists.txt
MyMultiProject/App/: CMakeLists.txt  main.cpp
MyMultiProject/Main/: CMakeLists.txt
MyMultiProject/ModuleA/: CMakeLists.txt
MyMultiProject/ModuleA/export/: ModuleA.h
MyMultiProject/ModuleA/src/: ModuleA.cpp
MyMultiProject/ModuleB/: CMakeLists.txt
MyMultiProject/ModuleB/export/: ModuleB.h
MyMultiProject/ModuleB/src/: ModuleB_PC.cpp  ModuleB_RASPI.c
MyMultiProject/cmakes/: PC_WIN.cmake  RASPI_CROSS.cmake  RASPI_NATIVE.cmake
Static_Shared/: CMakeLists.txt  Main.cpp
Static_Shared/SubModuleDynamic/: CMakeLists.txt  SubModuleDynamic.cpp  SubModuleDynamic.h
Static_Shared/SubModuleStatic/: CMakeLists.txt  SubModuleStatic.cpp  SubModuleStatic.h
SubModules/: CMakeLists.txt  Main.cpp
SubModules/SubModuleA/: CMakeLists.txt  SubModuleA.cpp  SubModuleA.h
SubModules/SubModuleB/: CMakeLists.txt  SubModuleB.cpp  SubModuleB.h
TestCuda/: CMakeLists.txt  main.cu
TestCuda2/: CMakeLists.txt
TestCuda2/CudaVecDouble/: CMakeLists.txt  CudaVecDouble.cu  CudaVecDouble.h
TestCuda2/Main/: main.cpp
TestGTest/: CMakeLists.txt  main.cpp
TestGTest/cmakes/: gtest.cmake
TestOpenCV/: CMakeLists.txt  main.cpp
TestOpenCV/Main/: CMakeLists.txt
TestOpenGL/: CMakeLists.txt  main.cpp
TestOpenMP/: CMakeLists.txt  main.cpp
