set(LIB_NAME SubModuleB)

set(LIB_TYPE_IS_SHARED ON)
if (LIB_TYPE_IS_SHARED)
  set(LIB_TYPE "SHARED")
  add_definitions(-DEXPORT_SHARED_LIB)
  add_definitions(-UEXPORT_STATIC_LIB)
  if(WIN32)
  else()
    add_definitions(-DEXPORT_SHARED_LIB)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fpic -fvisibility=hidden")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -fvisibility=hidden")
  endif()
else()
  set(LIB_TYPE "STATIC")
  add_definitions(-UEXPORT_SHARED_LIB)
  add_definitions(-DEXPORT_STATIC_LIB)
endif()

file(GLOB SOURCES "./*.c" "./*.cpp" "./*.h")
add_library(${LIB_NAME} ${LIB_TYPE} ${SOURCES})
target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
